--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
         </div>
         <div class="message">
-            ¡Para ti,Che babosa🙌! 
+            ¡Te amo mucho mi caracolito🙌! 
         </div>
     </div>
 
@@ -174,7 +174,7 @@
 
             const thumb = document.createElement('div');
             thumb.className = 'thumb';
-            thumb.innerText = ' 🖕😂 ';
+            thumb.innerText = ' 🖕😂❤️ ';
             thumb.style.left = (x - 25) + 'px';
             thumb.style.top = (y - 25) + 'px';
             document.body.appendChild(thumb);
