--- a/index.html
+++ b/index.html
@@ -39,25 +39,27 @@
             width: 100%;
         }
 
+        /* FOTO CORREGIDA: Sin círculo rosa */
         .user-photo {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            border: 4px solid #ff4d6d;
+            width: 280px; /* Un poco más grande para que luzca */
+            height: auto;
+            border: 2px solid white; /* Un borde fino blanco para que resalte */
+            border-radius: 10px; /* Bordes apenas redondeados, no círculo */
             object-fit: cover;
             margin-bottom: 20px;
-            box-shadow: 0 0 25px rgba(255, 77, 109, 0.6);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
             animation: fadeIn 2s ease-in;
         }
 
         .flower {
             position: relative;
-            transform: scale(0.9);
+            transform: scale(0.7); /* Reducida para que no tape la foto */
+            margin-top: -10px;
         }
 
         .stem {
             width: 10px;
-            height: 160px;
+            height: 120px;
             background: linear-gradient(to bottom, #2d5a27, #1e3d1a);
             margin: 0 auto;
             border-radius: 5px;
@@ -96,17 +98,17 @@
             left: 50%;
         }
 
-        .l1 { top: 60px; transform: translateX(5px); }
-        .l2 { top: 90px; transform: translateX(-45px) scaleX(-1); }
+        .l1 { top: 40px; transform: translateX(5px); }
+        .l2 { top: 70px; transform: translateX(-45px) scaleX(-1); }
 
         .message {
             color: white;
-            margin-top: 20px;
-            font-size: 1.6rem;
+            margin-top: 15px;
+            font-size: 1.4rem;
             font-weight: bold;
             opacity: 0;
             animation: fadeIn 2s ease-in forwards 1.5s;
-            background: rgba(0,0,0,0.3);
+            background: rgba(0,0,0,0.5);
             padding: 10px 20px;
             border-radius: 20px;
             text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
@@ -142,7 +144,8 @@
     </audio>
 
     <div class="container">
-        <img src="foto1.png" class="user-photo" alt="Foto">
+        <img src="foto1.png.jpeg" class="user-photo" alt="Foto">
+        
         <div class="flower">
             <div class="petals">
                 <div class="petal p1"></div>
@@ -156,8 +159,10 @@
                 <div class="leaf l2"></div>
             </div>
         </div>
+
         <div class="message">
-            ¡Te amo mucho mi caracolito🙌! 
+            ¡Te amo mucho mi caracolito🙌! <br>
+            <small style="font-size: 0.8rem; font-weight: normal;">(Toca la pantalla para la música 🎵)</small>
         </div>
     </div>
 
@@ -165,25 +170,25 @@
         const audio = document.getElementById('miAudio');
         let musicaIniciada = false;
 
-        function crearPulgar(x, y) {
-            // Iniciar música al primer toque
+        function manejarInteraccion(x, y) {
+            // Iniciar música al primer toque o clic
             if (!musicaIniciada) {
-                audio.play();
+                audio.play().catch(error => console.log("Esperando interacción..."));
                 musicaIniciada = true;
             }
 
             const thumb = document.createElement('div');
             thumb.className = 'thumb';
-            thumb.innerText = ' 🖕😂❤️ ';
+            thumb.innerText = ' ❤️ '; // He quitado el emoji de burla para que sea más tierno, puedes volver a ponerlo si quieres
             thumb.style.left = (x - 25) + 'px';
             thumb.style.top = (y - 25) + 'px';
             document.body.appendChild(thumb);
             setTimeout(() => { thumb.remove(); }, 800);
         }
 
-        document.addEventListener('mousedown', (e) => crearPulgar(e.clientX, e.clientY));
+        document.addEventListener('mousedown', (e) => manejarInteraccion(e.clientX, e.clientY));
         document.addEventListener('touchstart', (e) => {
-            crearPulgar(e.touches[0].clientX, e.touches[0].clientY);
+            manejarInteraccion(e.touches[0].clientX, e.touches[0].clientY);
         });
     </script>
 </body>
