--- a/index.html
+++ b/index.html
@@ -37,19 +37,28 @@
             z-index: 1;
         }
 
-        /* Foto rectangular sin círculo rosa */
         .user-photo {
             width: 250px;
             height: auto;
             border: 3px solid white;
             border-radius: 15px;
             box-shadow: 0 10px 25px rgba(0,0,0,0.5);
-            margin-bottom: 10px;
+            margin-bottom: 30px; /* Más espacio para que no tapen la foto */
+        }
+
+        /* Contenedor horizontal para las 3 flores */
+        .flowers-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px; /* Baja las flores respecto a la foto */
         }
 
         .flower {
             transform: scale(0.6);
-            margin-top: -20px;
+            position: relative;
+            width: 60px;
+            height: 140px;
         }
 
         .stem {
@@ -62,24 +71,40 @@
 
         .petals {
             animation: sway 3s ease-in-out infinite;
+            position: relative;
+            z-index: 2;
         }
 
         .petal {
             width: 50px;
             height: 80px;
-            background: #ff4d6d;
             border-radius: 50% 50% 50% 50% / 80% 80% 20% 20%;
             position: absolute;
-            bottom: -5px;
+            bottom: -15px;
             left: 50%;
             transform-origin: bottom center;
         }
 
-        .p1 { transform: translateX(-50%) rotate(0deg); z-index: 3; }
-        .p2 { transform: translateX(-50%) rotate(30deg); background: #ff758f; }
-        .p3 { transform: translateX(-50%) rotate(-30deg); background: #ff758f; }
-        .p4 { transform: translateX(-50%) rotate(60deg); background: #c9184a; height: 70px; }
-        .p5 { transform: translateX(-50%) rotate(-60deg); background: #c9184a; height: 70px; }
+        /* --- COLORES FLOR ROSA --- */
+        .pink .p1 { transform: translateX(-50%) rotate(0deg); background: #ff4d6d; z-index: 3; }
+        .pink .p2 { transform: translateX(-50%) rotate(30deg); background: #ff758f; }
+        .pink .p3 { transform: translateX(-50%) rotate(-30deg); background: #ff758f; }
+        .pink .p4 { transform: translateX(-50%) rotate(60deg); background: #c9184a; height: 70px; }
+        .pink .p5 { transform: translateX(-50%) rotate(-60deg); background: #c9184a; height: 70px; }
+
+        /* --- COLORES FLOR AZUL --- */
+        .blue .p1 { transform: translateX(-50%) rotate(0deg); background: #0077b6; z-index: 3; }
+        .blue .p2 { transform: translateX(-50%) rotate(30deg); background: #48cae4; }
+        .blue .p3 { transform: translateX(-50%) rotate(-30deg); background: #48cae4; }
+        .blue .p4 { transform: translateX(-50%) rotate(60deg); background: #023e8a; height: 70px; }
+        .blue .p5 { transform: translateX(-50%) rotate(-60deg); background: #023e8a; height: 70px; }
+
+        /* --- COLORES FLOR NEGRA --- */
+        .black .p1 { transform: translateX(-50%) rotate(0deg); background: #1a1a1a; z-index: 3; }
+        .black .p2 { transform: translateX(-50%) rotate(30deg); background: #444444; }
+        .black .p3 { transform: translateX(-50%) rotate(-30deg); background: #444444; }
+        .black .p4 { transform: translateX(-50%) rotate(60deg); background: #000000; height: 70px; }
+        .black .p5 { transform: translateX(-50%) rotate(-60deg); background: #000000; height: 70px; }
 
         .message {
             color: white;
@@ -88,7 +113,7 @@
             background: rgba(0,0,0,0.5);
             padding: 10px 20px;
             border-radius: 20px;
-            margin-top: 10px;
+            margin-top: 20px;
         }
 
         @keyframes sway {
@@ -101,6 +126,7 @@
             font-size: 40px;
             pointer-events: none;
             animation: floatUp 1s ease-out forwards;
+            z-index: 10;
         }
 
         @keyframes floatUp {
@@ -118,19 +144,43 @@
     <div class="container">
         <img src="foto1.png" class="user-photo" alt="Foto">
         
-        <div class="flower">
-            <div class="petals">
-                <div class="petal p1"></div>
-                <div class="petal p2"></div>
-                <div class="petal p3"></div>
-                <div class="petal p4"></div>
-                <div class="petal p5"></div>
+        <div class="flowers-container">
+            <div class="flower blue">
+                <div class="petals">
+                    <div class="petal p1"></div>
+                    <div class="petal p2"></div>
+                    <div class="petal p3"></div>
+                    <div class="petal p4"></div>
+                    <div class="petal p5"></div>
+                </div>
+                <div class="stem"></div>
             </div>
-            <div class="stem"></div>
+
+            <div class="flower pink">
+                <div class="petals">
+                    <div class="petal p1"></div>
+                    <div class="petal p2"></div>
+                    <div class="petal p3"></div>
+                    <div class="petal p4"></div>
+                    <div class="petal p5"></div>
+                </div>
+                <div class="stem"></div>
+            </div>
+
+            <div class="flower black">
+                <div class="petals">
+                    <div class="petal p1"></div>
+                    <div class="petal p2"></div>
+                    <div class="petal p3"></div>
+                    <div class="petal p4"></div>
+                    <div class="petal p5"></div>
+                </div>
+                <div class="stem"></div>
+            </div>
         </div>
 
         <div class="message">
-            ¡Te amo mucho mi caracolito🙌❤️! <br>
+            ¡Te amo mucho mi caracolito 🙌❤️! <br>
             <span style="font-size: 0.7rem;">(Toca la pantalla para que suene la música perra)</span>
         </div>
     </div>
@@ -146,6 +196,7 @@
             }
             const t = document.createElement('div');
             t.className = 'thumb';
+            // Mantiene tus emojis originales
             t.innerText = '🖕❤️😂';
             t.style.left = e.clientX + 'px';
             t.style.top = e.clientY + 'px';
